--- a/index_TA_by_sector.html
+++ b/index_TA_by_sector.html
@@ -143,42 +143,42 @@ var pie = new d3pie("pieChart", {
 		"content": [
 			{
 				"label": "Youth",
-				"value": 37,
+				"value": 40,
 				"color": "#7a0018"
 			},
 			{
 				"label": "Education",
-				"value": 28,
+				"value": 32,
 				"color": "#f2f2f2"
 			},
 			{
 				"label": "Poverty Alleviation",
-				"value": 22,
+				"value": 23,
 				"color": "#ff859d"
 			},
 			{
 				"label": "Disaster Relief",
-				"value": 13,
+				"value": 14,
 				"color": "#cc0029"
 			},
       {
         "label": "Health",
-        "value": 13,
+        "value": 14,
         "color": "#d8d8d8"
       },
       {
         "label": "Environment",
-        "value": 11,
+        "value": 12,
         "color": "#ff1f4b"
       },
       {
         "label": "Capacity-Building",
-        "value": 9,
+        "value": 10,
         "color": "#999999"
       },
       {
 				"label": "Rural Issues",
-				"value": 9,
+				"value": 10,
 				"color": "#8f001d"
 			},
       {
@@ -188,7 +188,7 @@ var pie = new d3pie("pieChart", {
 			},
       {
 				"label": "Infrastructure",
-				"value": 7,
+				"value": 9,
 				"color": "#555555"
 			},
       {
@@ -236,6 +236,11 @@ var pie = new d3pie("pieChart", {
 				"value": 2,
 				"color": "#666666"
 			},
+			{
+				"label": "Development",
+				"value": 1,
+				"color": "#7a0018"
+			},
       {
 				"label": "Energy",
 				"value": 1,
@@ -258,7 +263,7 @@ var pie = new d3pie("pieChart", {
       },
       {
         "label": "Tourism",
-        "value": 1,
+        "value": 2,
         "color": "#ffebef"
       }
 		]
