--- a/index_TA_by_origin.html
+++ b/index_TA_by_origin.html
@@ -148,7 +148,7 @@ var pie = new d3pie("pieChart", {
 			},
 			{
 				"label": "United States",
-				"value": 21,
+				"value": 22,
 				"color": "#999999"
 			},
 			{
@@ -183,7 +183,7 @@ var pie = new d3pie("pieChart", {
 			},
       {
 				"label": "The Netherlands",
-				"value": 2,
+				"value": 3,
 				"color": "#555555"
 			},
       {
@@ -196,6 +196,11 @@ var pie = new d3pie("pieChart", {
         "value": 1,
         "color": "#8f001d"
       },
+			      {
+        "label": "Macau",
+        "value": 1,
+        "color": "#ff0032"
+      },
       {
 				"label": "Sweden",
 				"value": 1,
@@ -205,6 +210,11 @@ var pie = new d3pie("pieChart", {
 				"label": "United Kingdom",
 				"value": 1,
 				"color": "#3c3c3c"
+			},
+			     {
+				"label": "Switzerland",
+				"value": 1,
+				"color": "#ff335c"
 			},
       {
         "label": "Vietnam",
