--- a/index_TA_histo_days.html
+++ b/index_TA_histo_days.html
@@ -6,6 +6,7 @@ body {
   max-width:800px;
   max-height:700px;
   font-size:88%;
+  font-family: Arial;
 }
 
 .axis path,
@@ -57,6 +58,11 @@ body {
   left: 0;
 }
 
+.axislabel {
+  font-family: PortraitText;
+  font-style:italic;
+  font-size:18px;
+}
 
 h1 {
     font-family:DrukText;
@@ -157,7 +163,7 @@ padding:5px;
 <script>
 
 //changed bottom margin to allow for rotated x-axis labels
-var margin = {top: 30, right: 20, bottom: 90, left: 50},
+var margin = {top: 30, right: 20, bottom: 90, left: 80},
     width = 700 - margin.left - margin.right,
     height = 300 - margin.top - margin.bottom;
 
@@ -196,7 +202,7 @@ var svg = d3.select("body").append("svg")
 
 svg.call(tip);
 
-d3.tsv('./TAlengthday.tsv', type, function(error, data) {
+d3.tsv('TAlengthday.tsv', type, function(error, data) {
   x.domain(data.map(function(d) { return d.length; }));
   y.domain([0, d3.max(data, function(d) { return d.number; })]);
 
@@ -220,10 +226,11 @@ d3.tsv('./TAlengthday.tsv', type, function(error, data) {
       .call(yAxis)
       .append("text")
       .attr("transform", "rotate(-90)")
-      .attr("y", 6)
+      .attr("y", -50)
       .attr("dy", ".71em")
-      .style("text-anchor", "end");
-
+      .attr("class", "axislabel")
+      .style("text-anchor", "end")
+      .text("Number of NGOs");
 
   svg.selectAll(".bar")
       .data(data)
