--- a/index_TA_histo_days.html
+++ b/index_TA_histo_days.html
@@ -230,7 +230,7 @@ d3.tsv('TAlengthday.tsv', type, function(error, data) {
       .attr("dy", ".71em")
       .attr("class", "axislabel")
       .style("text-anchor", "end")
-      .text("Number of NGOs");
+      .text("Number of Temporary Activities");
 
   svg.selectAll(".bar")
       .data(data)
