--- a/index_TA_dash1.html
+++ b/index_TA_dash1.html
@@ -475,7 +475,7 @@ var freqData=[
   	International: 0,
   	Labor: 0,
   	Law: 0,
-    Media: 0,
+    	Media: 0,
   	Poverty: 1,
   	Rural: 0,
   	Sport: 0,
@@ -492,10 +492,10 @@ var freqData=[
 	Agriculture: 0,
 	Animals: 0,
 	Culture: 0,
-	Capacity: 0,
+	Capacity: 1,
 	Disabilities: 0,
 	Disaster: 0,
-	Development: 0,
+	Development: 1,
 	Education: 3,
 	Energy: 0,
 	Environment: 1,
@@ -505,7 +505,7 @@ var freqData=[
 	International: 0,
 	Labor: 1,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
@@ -535,7 +535,7 @@ var freqData=[
 	International: 0,
 	Labor: 1,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 1,
 	Rural: 1,
 	Sport: 0,
@@ -565,7 +565,7 @@ var freqData=[
   	International: 0,
   	Labor: 1,
   	Law: 0,
-    Media: 0,
+    	Media: 0,
   	Poverty: 0,
   	Rural: 0,
   	Sport: 0,
@@ -591,11 +591,11 @@ var freqData=[
 	Environment: 0,
 	Ethnic: 0,
 	Health: 0,
-	Infrastructure: 1,
+	Infrastructure: 2,
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 3,
 	Rural: 3,
 	Sport: 0,
@@ -625,7 +625,7 @@ var freqData=[
 	International: 2,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 7,
 	Rural: 0,
 	Sport: 0,
@@ -655,7 +655,7 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
@@ -685,7 +685,7 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 5,
 	Rural: 0,
 	Sport: 0,
@@ -715,7 +715,7 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
@@ -745,7 +745,7 @@ var freqData=[
   	International: 0,
   	Labor: 0,
   	Law: 0,
-    Media: 0,
+    	Media: 0,
   	Poverty: 0,
   	Rural: 0,
   	Sport: 0,
@@ -775,7 +775,7 @@ var freqData=[
   	International: 0,
   	Labor: 0,
   	Law: 0,
-    Media: 0,
+    	Media: 0,
   	Poverty: 0,
   	Rural: 0,
   	Sport: 0,
@@ -805,7 +805,7 @@ var freqData=[
 	International: 0,
 	Labor: 1,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
@@ -835,7 +835,7 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
@@ -865,7 +865,7 @@ var freqData=[
   	International: 1,
   	Labor: 0,
   	Law: 0,
-    Media: 0,
+    	Media: 0,
   	Poverty: 0,
   	Rural: 0,
   	Sport: 0,
@@ -895,7 +895,7 @@ var freqData=[
 	International: 1,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
@@ -925,7 +925,7 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
@@ -935,6 +935,37 @@ var freqData=[
 	Women: 0,
 	Youth: 0}
 	},
+{
+	Province: "Ningxia",
+  freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 1,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+  	Media: 0,
+	Poverty: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 0,
+	Women: 0,
+	Youth: 1}
+	},	
+	
   {
   	Province: "Qinghai",
     freq:{
@@ -955,7 +986,7 @@ var freqData=[
   	International: 0,
   	Labor: 0,
   	Law: 0,
-    Media: 0,
+    	Media: 0,
   	Poverty: 0,
   	Rural: 1,
   	Sport: 0,
@@ -985,7 +1016,7 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 3,
 	Rural: 0,
 	Sport: 0,
@@ -1015,7 +1046,7 @@ var freqData=[
 	International: 3,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
@@ -1045,7 +1076,7 @@ var freqData=[
 	International: 1,
 	Labor: 1,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 4,
 	Rural: 3,
 	Sport: 0,
@@ -1075,7 +1106,7 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
@@ -1105,7 +1136,7 @@ var freqData=[
   	International: 0,
   	Labor: 0,
   	Law: 0,
-    Media: 0,
+    	Media: 0,
   	Poverty: 0,
   	Rural: 0,
   	Sport: 0,
@@ -1126,7 +1157,7 @@ var freqData=[
 	Disabilities: 1,
 	Disaster: 0,
 	Development: 0,
-	Education: 0,
+	Education: 1,
 	Energy: 0,
 	Environment: 2,
 	Ethnic: 0,
@@ -1135,7 +1166,7 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
+  	Media: 0,
 	Poverty: 0,
 	Rural: 1,
 	Sport: 1,
@@ -1143,7 +1174,7 @@ var freqData=[
 	Tourism: 0,
 	Trade: 0,
 	Women: 0,
-	Youth: 1}
+	Youth: 2}
 	},
   {
   	Province: "Zhejiang",
@@ -1165,7 +1196,7 @@ var freqData=[
   	International: 0,
   	Labor: 0,
   	Law: 0,
-    Media: 0,
+    	Media: 0,
   	Poverty: 0,
   	Rural: 2,
   	Sport: 0,
