--- a/index_RO_by_sector.html
+++ b/index_RO_by_sector.html
@@ -316,7 +316,7 @@ var pie = new d3pie("pieChart", {
 });
 d3.select("body").append("div")
 .attr("class", "tooltip")
-.html("<em><ul><li>Each foreign NGO representative office may be engaged in multiple fields of work, as listed on the Ministry of Public Security website, and therefore the totals shown in this chart are higher than the total number of representative offices during the same period.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li></ul></em>");
+.html("<em><ul><li>Each foreign NGO representative office may be engaged in multiple fields of work, as listed on the Ministry of Public Security website, and therefore the totals shown in this chart are higher than the total number of representative offices during the same period.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>Some fields of work have been abbreviated here: Civil Society Capacity-Building is shortened to Capacity-Building, International Relations/Exchange to International Relations, and Rural Issues/Development to Rural Issues.</li></ul></em>");
 
 
 </script>
