--- a/index_RO_histo_multoff.html
+++ b/index_RO_histo_multoff.html
@@ -60,9 +60,8 @@ body {
 
 
 .axislabel {
-  font-family: PortraitText;
-  font-style:italic;
-  font-size:18px;
+  font-family: DrukText;
+  font-size:22px;
 }
 
 h1 {
