--- a/index_RO_histo_multoff.html
+++ b/index_RO_histo_multoff.html
@@ -214,10 +214,10 @@ d3.tsv("ROmultoffices.tsv", type, function(error, data) {
       .attr("transform", "translate(0," + height + ")")
       .call(xAxis)
       .append("text")
-      .attr("x", 580)
+      .attr("x", 300)
       .attr("dy", "2em")
       .attr("class", "axislabel")
-      .style("text-anchor", "end")
+      .style("text-anchor", "middle")
       .text("Number of Offices");
     ;
 
@@ -227,6 +227,7 @@ d3.tsv("ROmultoffices.tsv", type, function(error, data) {
       .append("text")
       .attr("transform", "rotate(-90)")
       .attr("y", -50)
+      .attr("x", -40)
       .attr("dy", ".71em")
       .attr("class", "axislabel")
       .style("text-anchor", "end")
