--- a/index_RO_histo_regdate.html
+++ b/index_RO_histo_regdate.html
@@ -6,6 +6,7 @@ body {
   max-width:800px;
   max-height:700px;
   font-size:88%;
+  font-family: Arial;
 }
 
 .axis path,
@@ -57,6 +58,11 @@ body {
   left: 0;
 }
 
+
+.axislabel {
+  font-family: DrukText;
+  font-size:22px;
+}
 
 h1 {
     font-family:DrukText;
@@ -244,4 +250,3 @@ function type(d) {
 }
 
 </script>
-
