--- a/index_TA_histo_months.html
+++ b/index_TA_histo_months.html
@@ -59,9 +59,8 @@ body {
 }
 
 .axislabel {
-  font-family: PortraitText;
-  font-style:italic;
-  font-size:18px;
+  font-family: DrukText;
+  font-size:22px;
 }
 
 h1 {
@@ -77,8 +76,20 @@ h2 {
     color: #3c3c3c;
     font-weight: normal;
     line-height:12PX;
-
 }
+
+div.tooltip {
+  overflow:hidden;
+  max-width: 90%;
+  position:relative;
+
+  height: auto;
+  border-radius: 0px;
+  font: 14px PortraitText;
+  padding: 0px;
+  text-align: left;
+}
+
 
 #wrapper {
 
@@ -249,6 +260,11 @@ d3.tsv("TAlengthmonth.tsv", type, function(error, data) {
 function type(d) {
   d.number = +d.number;
   return d;
-}
+};
+
+d3.select("body").append("div")
+.attr("class", "tooltip")
+
+.html("<em><ul><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
 
 </script>
