--- a/index.html
+++ b/index.html
@@ -346,6 +346,28 @@
     "website_ch": "https://aicc.org.cn/"
   }
 },
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+       116.427607, 39.907594
+    ]
+  },
+  "properties": {
+    "orgname_en": "The Asia Foundation",
+    "orgname_ch": "亚洲基金会",
+    "psu_en": "Chinese People’s Association for Friendship with Foreign Countries",
+    "originloc": "United States",
+    "sector": "International Relations/Exchange, Disaster Relief, Civil Society Capacity-Building, Youth, Women’s Issues, Poverty Allevation",
+    "regloc": "Beijing",
+    "regdate": "June 30, 2017",
+    "actarea": "China",
+    "website_en": "http://asiafoundation.org/"
+  }
+},
+
+
       {
         "type": "Feature",
         "geometry": {
@@ -431,6 +453,29 @@
           "website_ch": "http://www.casaricci.org/zh/about/index.html"
         }
       },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             116.477493, 39.996200
+          ]
+        },
+        "properties": {
+          "orgname_en": "Caterpillar Foundation",
+          "orgname_ch": "卡特彼勒基金会",
+          "psu_en": "Chinese People’s Association for Friendship with Foreign Countries",
+          "originloc": "United States",
+          "sector": "Poverty Allevation, Disaster Relief, Education, Environment",
+          "regloc": "Beijing",
+          "regdate": "June 30, 2017",
+          "actarea": "China",
+          "website_en": "http://www.caterpillar.com/en/company/caterpillar-foundation.html",
+          "website_ch": "http://www.caterpillar.com/zh/company/caterpillar-foundation.html"
+        }
+      },
+
+
       {
         "type": "Feature",
         "geometry": {
@@ -1014,6 +1059,28 @@
         "geometry": {
           "type": "Point",
           "coordinates": [
+             116.439002, 39.908988
+          ]
+        },
+        "properties": {
+          "orgname_en": "Ford Foundation",
+          "orgname_ch": "福特基金会",
+          "psu_en": "Chinese People’s Association for Friendship with Foreign Countries",
+          "originloc": "United States",
+          "sector": "Economic Development, Education, Health, Poverty Alleviation, Civil Society Capacity-Building",
+          "regloc": "Beijing",
+          "regdate": "June 30, 2017",
+          "actarea": "China",
+          "website_en": "https://www.fordfoundation.org/regions/china/#lang-english"
+        }
+      },
+
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
             102.717343, 25.068383
           ]
         },
@@ -1073,6 +1140,27 @@
           "website_en": "http://www.fesdc.org/"
         }
       },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             116.378459, 39.971130
+          ]
+        },
+        "properties": {
+          "orgname_en": "Give2Asia",
+          "orgname_ch": "赠与亚洲",
+          "psu_en": "Chinese People’s Association for Friendship with Foreign Countries",
+          "originloc": "United States",
+          "sector": "Civil Society Capacity-Building, Education, Health, Environment, Disaster Relief, Economic Development, Arts and Culture, Women’s Issues, Youth, International Relations/Exchange",
+          "regloc": "Beijing",
+          "regdate": "June 30, 2017",
+          "actarea": "China",
+          "website_en": "http://www.give2asia.org/"
+        }
+      },
+
 
       {
 "type": "Feature",
@@ -2165,6 +2253,26 @@
           "website_ch": "http://www.mongolchamber.mn/cn/"
         }
       },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             116.460445, 39.906327
+          ]
+        },
+        "properties": {
+          "orgname_en": "Motion Picture Association of America",
+          "orgname_ch": "美国电影协会",
+          "psu_en": "National Copyright Administration",
+          "originloc": "United States",
+          "sector": "Trade, Arts and Culture",
+          "regloc": "Beijing",
+          "regdate": "June 23, 2017",
+          "actarea": "China",
+          "website_en": "http://www.mpaa.org/"
+        }
+      },
 
       {
         "type": "Feature",
@@ -3123,7 +3231,27 @@
           "website_ch": "http://www.gold.org/cn/homepage"
         }
       },
-
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             116.421289, 39.907010
+          ]
+        },
+        "properties": {
+          "orgname_en": "World Trade Centers Association",
+          "orgname_ch": "世界贸易中心协会",
+          "psu_en": "Beijing Commission of Commerce",
+          "originloc": "United States",
+          "sector": "Trade",
+          "regloc": "Beijing",
+          "regdate": "July 12, 2017",
+          "actarea": "China",
+          "website_en": "https://www.wtca.org/",
+          "website_ch": "https://www.wtca.org/"
+        }
+      },
 
       {
         "type": "Feature",
