--- a/index.html
+++ b/index.html
@@ -681,8 +681,50 @@
           "website_ch": "http://www.chinaoutbound.org/"
         }
       },
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+123.409101, 41.795352
+]
+},
+"properties": {
+"orgname_en": "China-Britain Business Council (Liaoning)",
+"orgname_ch": "英中贸易协会",
+"psu_en": "Liaoning Department of Commerce",
+"originloc": "United Kingdom",
+"sector": "Trade",
+"regloc": "Liaoning",
+"regdate": "July 19, 2017",
+"actarea": "Liaoning, Jilin, Heilongjiang",
+"website_en": "http://www.cbbc.org/",
+"website_ch": "http://www.chinaoutbound.org/"
+}
+},
 
-
+      
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+118.019291, 24.468430
+]
+},
+"properties": {
+"orgname_en": "The Chinese Art of Tea Craft Union",
+"orgname_ch": "中华茶艺联合促进会",
+"psu_en": "Fujian Department of Agriculture",
+"originloc": "Taiwan",
+"sector": "Arts and Culture, International Relations/Exchange",
+"regloc": "Fujian",
+"regdate": "July 14, 2017",
+"actarea": "Fujian",
+"website_en": "http://www.tea-union.com.tw/"
+}
+},
+      
       {
         "type": "Feature",
         "geometry": {
