--- a/index_registeredofficestable.html
+++ b/index_registeredofficestable.html
@@ -227,7 +227,7 @@ font-style: italic;
  <tr><td>USA Poultry and Egg Export Council</td><td>美国家禽蛋品出口协会</td><td>United States</td><td>Trade</td><td>Shanghai Commission of Commerce</td><td>Shanghai</td><td>2017-04-10</td><td>Shanghai, Jiangsu, Zhejiang, Anhui, Jiangxi, Hubei, Hunan, Chongqing, Sichuan, Guizhou, Yunnan</td></tr>
  <tr><td>Victorian Chamber of Commerce</td><td>澳大利亚维多利亚州工商会</td><td>Australia</td><td>Trade</td><td>Shanghai Commission of Commerce</td><td>Shanghai</td><td>2017-05-31</td><td>China</td></tr>
  <tr><td>Water Quality Association</td><td>美国水质协会</td><td>United States</td><td>Trade</td><td>Shanghai Commission of Commerce</td><td>Shanghai</td><td>2017-05-31</td><td>China</td></tr>
- <tr><td>World Association of Chinese Doctors</td><td>世界华人医师协会</td><td>Macau</td><td>Health, International Relations/Exchange</td><td>Shandong Health and Family Planning Commission</td><td>Shandong</td><td>2017-05-18</td><td>Yunnan, Shaanxi, Guangdong, Anhui, Ningxia, Hubei, Shandong, Jiangxi, Qinghai, Xinjiang, Xinjiang Bingtuan, Guizhou, Jilin, Chongqing, Tianjin, Liaonin, Shanxi, Henan, Inner Mongolia, Hainan, Gansu, Tibet, Guangxi, Jiangsu, Heilongjiang, Shanghai, Zhejiang, Hunan, Hebei, Beijing, Sichuan, Fujian</td></tr>
+ <tr><td>World Association of Chinese Doctors</td><td>世界华人医师协会</td><td>Macau</td><td>Health, International Relations/Exchange</td><td>Shandong Health and Family Planning Commission</td><td>Shandong</td><td>2017-05-18</td><td>Yunnan, Shaanxi, Guangdong, Anhui, Ningxia, Hubei, Shandong, Jiangxi, Qinghai, Xinjiang, Xinjiang Bingtuan, Guizhou, Jilin, Chongqing, Tianjin, Liaoning, Shanxi, Henan, Inner Mongolia, Hainan, Gansu, Tibet, Guangxi, Jiangsu, Heilongjiang, Shanghai, Zhejiang, Hunan, Hebei, Beijing, Sichuan, Fujian</td></tr>
  <tr><td>World Economic Forum </td><td>世界经济论坛</td><td>United States</td><td>International Relations/Exchange, Economic Development</td><td>National Development and Reform Commission</td><td>Beijing</td><td>2017-01-23</td><td>China</td></tr>
  <tr><td>World Gold Council</td><td>瑞士世界黄金协会</td><td>Switzerland</td><td>Trade</td><td>Shanghai Commission of Commerce</td><td>Shanghai</td><td>2017-05-31</td><td>China</td></tr>
  <tr><td>World Trade Centers Association</td><td>世界贸易中心协会</td><td>United States</td><td>Trade</td><td>Beijing Commission of Commerce</td><td>Beijing</td><td>2017-07-12</td><td>China</td></tr>
@@ -241,8 +241,9 @@ font-style: italic;
  <tr><td>Yamagata International Economic Development Support Organization</td><td>日本一般社团法人山形县国际经济振兴机构</td><td>Japan</td><td>Trade, Tourism, Technology, Economic Development</td><td>Heilongjiang Department of Commerce</td><td>Heilongjiang</td><td>2017-06-12</td><td>Jilin, Guandong, Chongqing, Tianjin, Liaoning, Heilongjiang, Shanghai, Zhejiang, Hebei, Beijing</td></tr>
  <tr><td>Yin Shin Leung Charitable Foundation</td><td>应善良基金会</td><td>Hong Kong</td><td>Infrastructure</td><td>State Council Overseas Chinese Affairs Office</td><td>Shanghai</td><td>2017-01-17</td><td>China</td></tr>
  <tr><td>Zhang Xueliang Foundation</td><td>张学良基金会</td><td>Hong Kong</td><td>Poverty Alleviation, Youth, Aging, Disaster Relief, Arts and Culture, Education, International Relations/Exchange</td><td>Guangdong Department of Civil Affairs</td><td>Guangdong</td><td>2017-04-11</td><td>Guangdong</td></tr>
+ <tr><td>China-Britain Business Council (Liaoning)</td><td>英中贸易协会</td><td>United Kingdom</td><td>Trade</td><td>Liaoning Department of Commerce</td><td>Liaoning</td><td>2017-07-19</td><td>Liaoning, Jilin, Heilongjiang</td></tr>
+ <tr><td>The Chinese Art of Tea Craft Union</td><td>中华茶艺联合促进会</td><td>Taiwan</td><td>Arts and Culture, International Relations/Exchange</td><td>Fujian Department of Agriculture</td><td>Fujian</td><td>2017-07-14</td><td>Fujian</td></tr>
 </tbody></table>
-    
     
 <!–– add your tableizer data above this line––>
 </body>
