--- a/index_RO_dash1.html
+++ b/index_RO_dash1.html
@@ -172,7 +172,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Representative Offices’ Fields of Work by Province, January-June 2017</h1></div>
+<div id="header"><h1>Representative Offices’ Fields of Work by Province, January-July 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 <div id='histogramdiv'></div>
@@ -438,14 +438,15 @@ var freqData=[
 	Development: 6,
 	Education: 17,
 	Energy: 1,
-	Environment: 11,
+	Environment: 12,
 	Ethnic: 1,
 	Health: 14,
 	Infrastructure: 1,
-	International: 10,
+	International: 11,
 	Labor: 1,
 	Law: 2,
 	Poverty: 5,
+	Religion: 0,
 	Rural: 0,
 	Sport: 1,
 	Technology: 0,
@@ -475,6 +476,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 0,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -504,6 +506,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 2,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -533,6 +536,7 @@ var freqData=[
 	Labor: 1,
 	Law: 0,
 	Poverty: 3,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -562,6 +566,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 0,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -591,6 +596,7 @@ var freqData=[
 	Labor: 1,
 	Law: 0,
 	Poverty: 0,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -620,6 +626,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 0,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 1,
@@ -649,6 +656,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 0,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -679,6 +687,7 @@ var freqData=[
 	Law: 0,
 	Poverty: 0,
 	Rural: 1,
+	Religion: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
@@ -707,6 +716,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 0,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -736,6 +746,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 1,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -765,6 +776,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 0,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -794,6 +806,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 0,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -823,6 +836,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 0,
+	Religion: 0,
 	Rural: 1,
 	Sport: 0,
 	Technology: 1,
@@ -852,6 +866,7 @@ var freqData=[
 	Labor: 1,
 	Law: 1,
 	Poverty: 1,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 1,
@@ -881,6 +896,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 3,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -910,6 +926,7 @@ var freqData=[
 	Labor: 1,
 	Law: 0,
 	Poverty: 1,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -939,6 +956,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 0,
+	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -968,6 +986,7 @@ var freqData=[
 	Labor: 0,
 	Law: 0,
 	Poverty: 3,
+	Religion: 0,
 	Rural: 1,
 	Sport: 0,
 	Technology: 0,
