--- a/index_RO_dash1.html
+++ b/index_RO_dash1.html
@@ -97,7 +97,7 @@ rect:hover {  fill:black; }
 .legend td{
     padding:4px 5px;
     vertical-align:bottom;
-    font-size: 14px;
+    font-size: 12px;
 
 }
 .legendFreq, .legendPerc{
@@ -189,11 +189,11 @@ padding:0px;
 
 function dashboard(id, fData){
     var barColor = '#666666';
-    function segColor(c){ return {Aging:"#520010", Agriculture:"#7a0018", Animals:"#a30021", Culture:"#cc0029", Capacity:"#f50031", Disabilities:"#ff1f4b", Disaster:"#ff476c", Development:"#ff708d", Education:"#ff99ad", Energy:"#ffc2ce", Environment:"#ff335c", Ethnic:"#0b536f", Health:"#0f6f95", Infrastructure:"#128aba", International:"#16a6df", Labor:"#33b7eb", Law:"#58c4ee", Poverty:"#7dd1f2", Rural:"#a2def6", Sport:"#c7ebf9", Technology:"#231f1f", Tourism:"#555555", Trade:"#999999", Women:"#d8d8d8", Youth:"#f2f2f2"
+    function segColor(c){ return {Aging:"#520010", Agriculture:"#7a0018", Animals:"#a30021", Culture:"#cc0029", Capacity:"#f50031", Disabilities:"#ff1f4b", Disaster:"#ff476c", Development:"#ff708d", Education:"#ff99ad", Energy:"#ffc2ce", Environment:"#ff335c", Ethnic:"#0b536f", Health:"#0f6f95", Infrastructure:"#128aba", International:"#16a6df", Labor:"#33b7eb", Law:"#58c4ee", Poverty:"#7dd1f2", Religion: "#0d6182", Rural:"#a2def6", Sport:"#c7ebf9", Technology:"#231f1f", Tourism:"#555555", Trade:"#999999", Women:"#d8d8d8", Youth:"#f2f2f2"
   }[c]; }
 
     // compute total for each state.
-    fData.forEach(function(d){d.total=d.freq.Aging+d.freq.Agriculture+d.freq.Animals+d.freq.Culture+d.freq.Capacity+d.freq.Disabilities+d.freq.Disaster+d.freq.Development+d.freq.Education+d.freq.Energy+d.freq.Environment+d.freq.Ethnic+d.freq.Health+d.freq.Infrastructure+d.freq.International+d.freq.Labor+d.freq.Law+d.freq.Poverty+d.freq.Rural+d.freq.Sport+d.freq.Technology+d.freq.Tourism+d.freq.Trade+d.freq.Women+d.freq.Youth;});
+    fData.forEach(function(d){d.total=d.freq.Aging+d.freq.Agriculture+d.freq.Animals+d.freq.Culture+d.freq.Capacity+d.freq.Disabilities+d.freq.Disaster+d.freq.Development+d.freq.Education+d.freq.Energy+d.freq.Environment+d.freq.Ethnic+d.freq.Health+d.freq.Infrastructure+d.freq.International+d.freq.Labor+d.freq.Law+d.freq.Poverty+d.freq.Religion+d.freq.Rural+d.freq.Sport+d.freq.Technology+d.freq.Tourism+d.freq.Trade+d.freq.Women+d.freq.Youth;});
 
     // function to handle histogram.
     //USE THIS AREA TO ADJUST LOCATION OF X AXIS AND MAX BAR HEIGHT
@@ -321,7 +321,7 @@ var tooltip = d3.select("body").append("div").attr("class", "toolTip");
 //got this here https://bl.ocks.org/alandunning/274bf248fd0f362d64674920e85c1eb7
                           tooltip
                             .style("display", "inline-block")
-                            .html("<strong>" + (d.data.type) + "</strong>" + "<br>" + (d.value) + " Offices");})
+                            .html("<strong>" + (d.data.type) + "</strong>" + "<br>" + (d.value) + " Office(s)");})
             .on("mouseout.stuff",mouseout).on("mouseout.tip", function(d){tooltip.style("display", "none");});
 
 
@@ -407,7 +407,7 @@ var tooltip = d3.select("body").append("div").attr("class", "toolTip");
     }
 
     // calculate total frequency by segment for all state.
-    var tF = ['Aging','Agriculture','Animals','Culture','Capacity','Disabilities','Disaster','Development','Education','Energy','Environment','Ethnic','Health','Infrastructure','International','Labor','Law','Poverty','Rural','Sport','Technology','Tourism','Trade','Women','Youth'].map(function(d){
+    var tF = ['Aging','Agriculture','Animals','Culture','Capacity','Disabilities','Disaster','Development','Education','Energy','Environment','Ethnic','Health','Infrastructure','International','Labor','Law','Poverty','Religion','Rural','Sport','Technology','Tourism','Trade','Women','Youth'].map(function(d){
         return {type:d, freq: d3.sum(fData.map(function(t){ return t.freq[d];}))};
     });
 
@@ -450,8 +450,8 @@ var freqData=[
 	Rural: 0,
 	Sport: 1,
 	Technology: 0,
-	Tourism: 0,
-	Trade: 15,
+	Tourism: 1,
+	Trade: 20,
 	Women: 3,
 	Youth: 12}
 	},
@@ -485,6 +485,37 @@ var freqData=[
 	Women: 0,
 	Youth: 1}
 	},
+  {
+  	Province: "Fujian",
+  	freq:{
+  	Aging: 0,
+  	Agriculture: 0,
+  	Animals: 0,
+  	Culture: 2,
+  	Capacity: 1,
+  	Disabilities: 0,
+  	Disaster: 0,
+  	Development: 0,
+  	Education: 1,
+  	Energy: 0,
+  	Environment: 0,
+  	Ethnic: 0,
+  	Health: 0,
+  	Infrastructure: 0,
+  	International: 2,
+  	Labor: 0,
+  	Law: 0,
+  	Poverty: 0,
+  	Religion: 1,
+  	Rural: 0,
+  	Sport: 0,
+  	Technology: 0,
+  	Tourism: 0,
+  	Trade: 1,
+  	Women: 0,
+  	Youth: 1}
+  	},
+
 {
 	Province: "Gansu",
 	freq:{
@@ -554,9 +585,9 @@ var freqData=[
 	Culture: 0,
 	Capacity: 0,
 	Disabilities: 0,
-	Disaster: 1,
+	Disaster: 2,
 	Development: 0,
-	Education: 0,
+	Education: 1,
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
@@ -565,15 +596,15 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-	Poverty: 0,
+	Poverty: 1,
 	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 0,
+	Trade: 1,
 	Women: 0,
-	Youth: 1}
+	Youth: 2}
 	},
 {
 	Province: "Guizhou",
@@ -781,7 +812,7 @@ var freqData=[
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 4,
+	Trade: 5,
 	Women: 0,
 	Youth: 0}
 	},
@@ -882,9 +913,9 @@ var freqData=[
 	Agriculture: 0,
 	Animals: 0,
 	Culture: 0,
-	Capacity: 0,
+	Capacity: 1,
 	Disabilities: 0,
-	Disaster: 1,
+	Disaster: 2,
 	Development: 0,
 	Education: 2,
 	Energy: 0,
@@ -903,7 +934,7 @@ var freqData=[
 	Tourism: 0,
 	Trade: 1,
 	Women: 0,
-	Youth: 1}
+	Youth: 2}
 	},
 {
 	Province: "Tianjin",
@@ -911,7 +942,7 @@ var freqData=[
 	Aging: 0,
 	Agriculture: 0,
 	Animals: 0,
-	Culture: 0,
+	Culture: 1,
 	Capacity: 0,
 	Disabilities: 2,
 	Disaster: 1,
@@ -922,16 +953,16 @@ var freqData=[
 	Ethnic: 0,
 	Health: 0,
 	Infrastructure: 0,
-	International: 1,
-	Labor: 1,
+	International: 2,
+	Labor: 2,
 	Law: 0,
 	Poverty: 1,
 	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
-	Tourism: 0,
-	Trade: 3,
+	Tourism: 1,
+	Trade: 4,
 	Women: 0,
 	Youth: 2}
 	},
@@ -972,28 +1003,28 @@ var freqData=[
 	Agriculture: 0,
 	Animals: 1,
 	Culture: 0,
-	Capacity: 0,
-	Disabilities: 0,
-	Disaster: 4,
+	Capacity: 1,
+	Disabilities: 2,
+	Disaster: 8,
 	Development: 0,
-	Education: 2,
+	Education: 5,
 	Energy: 0,
 	Environment: 2,
 	Ethnic: 0,
-	Health: 7,
-	Infrastructure: 0,
-	International: 0,
-	Labor: 0,
+	Health: 11,
+	Infrastructure: 2,
+	International: 1,
+	Labor: 1,
 	Law: 0,
-	Poverty: 3,
+	Poverty: 4,
 	Religion: 0,
-	Rural: 1,
+	Rural: 3,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
 	Trade: 0,
 	Women: 1,
-	Youth: 2}
+	Youth: 6}
 	}
 ]
 ;
@@ -1005,4 +1036,3 @@ d3.select("body").append("div")
 .html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>Each foreign NGO representative office may be engaged in multiple fields of work, as listed on the Ministry of Public Security website, and therefore the totals shown in this chart are higher than the total number of representative offices during the same period.</li><li>Each representative office has only one country or region of origin, as listed by the Ministry of Public Security website.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>Some fields of work have been abbreviated here: Animal Protection is shortened to Animals, Arts and Culture to Culture, Civil Society Capacity-Building to Capacity, Disaster Relief to Disaster, Economic Development to Development, Ethnic Affairs to Ethnic, International Relations/Exchange to International, Labor and Migrants to Labor, Law and Governance to Law, Poverty Alleviation to Poverty, Rural Issues/Development to Rural, and Women’s Issues to Women.</li></ul></em>");
 
 </script>
-
